Rename other parametrs start

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <link rel="icon" href="assets/images/favicon.png" sizes="32x32" type="image/png">
-        <title>MetaMax – SEO and Marketing HTML5 Template</title>
+        <title>iTarget – SEO and Marketing</title>
 
         <link rel="stylesheet" href="assets/css/all.min.css">
         <link rel="stylesheet" href="assets/css/flaticon.css">
@@ -49,7 +49,7 @@
                                 </div><!-- Logo -->
                                 <div class="menu d-flex flex-row align-items-center justify-content-end flex-nowrap w-100">
                                     <ul class="main-menu mb-0 list-unstyled d-flex flex-row align-items-center justify-content-start flex-wrap">
-                                        <li class="menu-item-has-children"><a href="javascript:void(0);" title="">Home</a>
+           <!--                              <li class="menu-item-has-children"><a href="javascript:void(0);" title="">Home</a>
                                             <ul class="children mb-0 list-unstyled">
                                                 <li><a href="index.html" title="">Home 1</a></li>
                                                 <li><a href="index2.html" title="">Home 2</a></li>
@@ -130,14 +130,17 @@
                                                 <li><a href="checkout.html" title="">Checkout</a></li>
                                                 <li><a href="shop-shortcodes.html" title="">Shortcodes</a></li>
                                             </ul>
-                                        </li>
-                                        <li><a href="contact.html" title="">Contacts</a></li>
+                                        </li> -->
+                                        <li><a href="contact.html" title="">Статистика</a></li>
+                                        <li><a href="contact.html" title="">Поисковики</a></li>
+                                        <li><a href="contact.html" title="">Задачи</a></li>
+                                        <li><a href="contact.html" title="">Направления</a></li>
                                     </ul>
                                 </div><!-- Menu -->
                             </div><!-- Menu Wrap -->
                             <div class="menu-right-icons d-flex flex-row align-items-center justify-content-end flex-nowrap">
                                 <span class="search-btn"></span>
-                                <div class="mini-cart">
+<!--                                 <div class="mini-cart">
                                     <a href="javascript:void(0);" title="View your shopping cart"><i class="metaicon-cart"></i><span>3</span></a>
                                     <div class="minicart-dropdown">
                                         <ul class="mb-0 list-unstyled w-100">
@@ -180,7 +183,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </nav>
                     </div><!-- Header Nav Wrap -->
@@ -201,7 +204,7 @@
                         <div class="menu-right-icons text-white d-flex flex-row align-items-center justify-content-end flex-nowrap">
                             <span class="responsive-menu-btn"><i class="fas fa-align-justify"></i></span>
                             <span class="search-btn"></span>
-                            <div class="mini-cart">
+<!--                             <div class="mini-cart">
                                 <a href="javascript:void(0);" title="View your shopping cart"><i class="metaicon-cart"></i><span>3</span></a>
                                 <div class="minicart-dropdown">
                                     <ul class="mb-0 list-unstyled w-100">
@@ -244,7 +247,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -1018,7 +1021,7 @@
                         <div class="about-wrap w-100">
                             <div class="row align-items-center">
                                 <div class="col-md-6 col-sm-12 col-lg-6">
-                                    <img class="img-fluid" src="assets/images/resources/about-mckp1.png" alt="About Mockup">
+                                    <img class="img-fluid" src="assets/images/resources/slide-bg1.jpg" alt="About Mockup">
                                 </div>
                                 <div class="col-md-6 col-sm-12 col-lg-6">
                                     <div class="about-desc w-100">
@@ -1042,7 +1045,7 @@
                             <div class="col-md-6 col-sm-12 col-lg-6">
                                 <div class="service-box-wrap2 d-flex flex-wrap align-items-center mb-30">
                                     <div class="service-img2 overflow-hidden">
-                                        <img class="img-fluid" src="assets/images/resources/service-img2-1.jpg" alt="service-img2-1">
+                                        <img class="img-fluid" src="assets/images/resources/slide-bg1.jpg" alt="service-img2-1">
                                     </div>
                                     <div class="service-info2 text-color12">
                                         <i class="metaicon-pie-chart text-color8"></i>
@@ -1055,7 +1058,7 @@
                             <div class="col-md-6 col-sm-12 col-lg-6">
                                 <div class="service-box-wrap2 d-flex flex-wrap align-items-center mb-30">
                                     <div class="service-img2 overflow-hidden">
-                                        <img class="img-fluid" src="assets/images/resources/service-img2-2.jpg" alt="service-img2-2">
+                                        <img class="img-fluid" src="assets/images/resources/slide-bg1.jpg" alt="service-img2-2">
                                     </div>
                                     <div class="service-info2 text-color12">
                                         <i class="fas fa-star text-color8"></i>
@@ -1136,19 +1139,19 @@
                 <div class="w-100 bg-color5 position-relative pt-100 pb-200">
                     <div class="bg-waves">
                         <div class="wave wave-top-left">
-                            <img class="layer" src="assets/images/top-left2.png" alt="top-left2">
-                            <img class="layer" src="assets/images/top-left1.png" alt="top-left1">
+                            <img class="layer" src="assets/images/slide-bg1.jpg" alt="top-left2">
+                            <img class="layer" src="assets/images/slide-bg1.jpg" alt="top-left1">
                         </div>
                         <div class="wave wave-bottom-right">
-                            <img class="layer" src="assets/images/bottom-right2.png" alt="bottom-right2">
-                            <img class="layer" src="assets/images/bottom-right1.png" alt="bottom-right1">
+                            <img class="layer" src="assets/images/slide-bg1.jpg" alt="bottom-right2">
+                            <img class="layer" src="assets/images/slide-bg1.jpg" alt="bottom-right1">
                         </div>
                     </div>
                     <div class="container">
                         <div class="about-wrap2 position-relative w-100">
                             <div class="row align-items-center">
                                 <div class="col-md-6 col-sm-12 col-lg-6">
-                                    <img class="img-fluid" src="assets/images/resources/about-mckp2.png" alt="About Mockup">
+                                    <img class="img-fluid" src="assets/images/resources/slide-bg1.jpg" alt="About Mockup">
                                 </div>
                                 <div class="col-md-6 col-sm-12 col-lg-6">
                                     <div class="about-desc2 w-100">
@@ -1168,13 +1171,13 @@
                         <div class="about-info-wrap mt-ovrlp150 w-100 position-relative">
                             <div class="row mrg">
                                 <div class="col-md-6 col-sm-12 col-lg-6">
-                                    <div class="about-info-cap overflow-hidden w-100" style="background-image: url(assets/images/text-bg.jpg);">
+                                    <div class="about-info-cap overflow-hidden w-100" style="background-image: url(assets/images/resources/slide-bg1.jpg);background-size:contain;">
                                         <h2 class="mb-0 text-white">Already <br> <span class="text-color7">ten year</span> <br> in the game</h2>
                                         <p class="mb-0 text-white">Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit, sed do</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-sm-12 col-lg-6">
-                                    <img class="img-fluid brd-rd20" src="assets/images/resources/text-img.jpg" alt="Text Image">
+                                    <img class="img-fluid brd-rd20" src="assets/images/resources/slide-bg1.jpg" alt="Text Image">
                                 </div>
                             </div>
                         </div><!-- About Info Wrap -->
