--- a/index4.html
+++ b/index4.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <link rel="icon" href="assets/images/favicon.png" sizes="32x32" type="image/png">
-        <title>MetaMax – SEO and Marketing HTML5 Template</title>
+        <title>iTarget – SEO and Marketing</title>
 
         <link rel="stylesheet" href="assets/css/all.min.css">
         <link rel="stylesheet" href="assets/css/flaticon.css">
